--- a/form/stylesheet-form.css
+++ b/form/stylesheet-form.css
@@ -71,11 +71,20 @@ label{
 }
 
 input{
-    -webkit-border-radius: 10px;
-    -moz-border-radius:10px;
-    border-radius: 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius:5px;
+    border-radius: 5px;
     background-color: #703370;
     border: 2px solid #F2F1F7;
+    color: #fff;
+    padding: 5px;
+}
+
+input::placeholder{
+    color: #fff;
+    font-size: 10px;
+    text-align: left center;
+    letter-spacing: 2px;
 }
 
 .conect{
@@ -95,7 +104,7 @@ input{
     width: 07em;
     height: 03em;
     background-color: #703370;
-    letter-spacing: 0.1em;
+    letter-spacing: 2px;
 }
 
 .submit:hover{
@@ -103,7 +112,7 @@ input{
     background-color: #1a0236;
 }
 
-#checkbox{
+.conect{
     -webkit-border-radius: 10px;
     -moz-border-radius:10px;
     border-radius: 10px;
