--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,18 +5,90 @@ body{
     margin: 10px;
     color: white;
 }
-
-.header{
-    color:#ecd0d1;
-    flex-direction: row;
-    display: flex;
-    justify-content: flex-end;
-    list-style-type: none;
-    justify-content: space-around 25px;
-    padding: 10px;
-    margin: 05px;
+/*LINK NAV*/
+a{
+    color: #fff;
     text-decoration: none;
+    transition: 0.3s;
 }
+
+a:hover{
+    opacity: 0.7;
+}
+
+/*LOGO*/
+.logo{
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing:  4px;
+}
+/*FORMATAÇÃO DA NAVEGAÇÃO*/
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #441c47;
+    height: 10vh;
+}
+/*FORMATAÇÃO DA LISTA*/
+.nav-list{
+    list-style: none;
+    display: flex;
+}
+
+.nav-list li{
+    letter-spacing: 5px;
+    margin-left: 32px;
+}
+/*CRIANDO MENU SANDUICHE*/
+
+.mobile-menu div{ 
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    cursor: pointer;
+}
+/*RESPONSIVIDADE MOBILE*/
+@media (max-width: 999px) {
+    body{
+        overflow-x: hidden;
+    }
+    .nav-list{
+        position: absolute; /*ira se sobrepor a qualquer elemento*/
+        top: 8vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background: rgba(53, 2, 54, 0.5);    
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+    }
+    .nav-list li{
+        margin-left: o;
+        opacity: 0;
+    }
+
+    .mobile-menu{
+         display: block;
+    }
+}
+
+/*BARRA DE ROLAGEM*/
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #131313;
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgba(47, 36, 65, 0.5);
+    border-radius: 10px;
+}
+
 
 .conteudo{
     color: #ecd0d1;
