--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,6 +49,10 @@ nav{
     margin: 8px;
     cursor: pointer;
 }
+
+.mobile-menu{
+    display: none;
+}
 /*RESPONSIVIDADE MOBILE*/
 @media (max-width: 999px) {
     body{
