--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,10 +90,15 @@ nav{
     .conteudo{
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        
     }
-
+    .conteudo img{
+        max-width:300px;
+        max-height:250px;
+        width: auto;
+        height: auto;
+        margin-left: 70px;
+        margin-top: 50px;
+    }
 }
 
 
@@ -162,3 +167,7 @@ footer{
     justify-content: space-around 05px;
 }
 
+.bg{
+    padding: 30px;
+    width: 400px;
+}
